k8s/gcp/network-policy/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-client
  labels:
    access: denied
spec:
  containers:
    - name: curl
      image: curlimages/curl:latest
      command: ["sleep", "3600"]
