k8s/gcp/network-policy/hello-gke-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-hello-gke
spec:
  podSelector:
    matchLabels:
      app: hello-gke

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: allowed
      ports:
        - protocol: TCP
          port: 80
